# exargs

./: README.md  config.yaml  exargs.py  pyproject.toml  release.sh
.github/workflows/: release.yml
exargs/: __init__.py  exargs.py
exargs_test/: test_config_addvar.py  test_config_resolver.py  test_dfs_operator.py  test_operator.py
test/: test_config_resolver.py
